# ecn_manip

./: .dh_example.yml.kate-swp  .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.8-pre1  CMakeLists.txt.user.auto  LICENSE  baxter.yml  control.cpp  dh_example.yml  package.xml  robot_kr16.cpp  robot_kr3.cpp  robot_turret.cpp  robot_ur10.cpp
example/: cylinder_solver.cpp  robot_cylinder.cpp  robot_cylinder.h  robot_rrrp.cpp  robot_rrrp.h  rrrp.yml  rrrp_solver.cpp
example/latex/: RRRP_example.tex
include/ecn_manip/: models.h  node.h  robot_base.h  robot_init.h  robot_kr16.h  robot_turret.h  robot_ur10.h  trig_solvers.h
launch/: dh.launch  kr16.launch  kr16.rviz  mdh.launch  mdh_launch.py  rr.launch  rrrp.launch  rrrp.rviz  rviz.launch  simulation_launch.py  test.rviz  turret.launch  turret.rviz  ur10.launch  ur10.rviz
launch/rviz_config/: rrrp.rviz  turret.rviz  ur10.rviz
msg/: RobotConfig.msg
robots/: cylinder.urdf  dh.urdf  dh_example.yml  kr16.launch  kr16.urdf  loaded.launch.bak  mdh.urdf  rr.urdf  rrrp.launch  rviz.launch  scara.launch  turret.launch  turret.urdf  ur10.launch  ur10.urdf
robots/kuka_kr16_support/launch/: dh.launch  load_kr16_2.launch  test_kr16_2.launch
robots/kuka_kr16_support/urdf/: kr16.urdf  kr16.xacro  kr16_macro.xacro
robots/rviz_config/: config.rviz  kr16.rviz  mdh.rviz  scara.rviz  turret.rviz  ur10.rviz
robots/simple/: mdh.launch  mdh.urdf  rrrp.urdf
robots/ur_description/: NOTICE
robots/ur_description/urdf/: ur10.urdf.xacro.bak  ur10_joint_limited_robot.urdf.xacro  ur10_robot.urdf.xacro
src/: models.h  node.cpp  node.h  robot_base.cpp  robot_base.h  robot_init.h  robot_kr16.h  robot_turret.h  robot_ur10.h  test_solvers.cpp  trig_solvers.cpp  trig_solvers.h  ur_kin.cpp
src/python/: arm_bridge.py  dh_code.py  joint_state_publisher.py  manip_control.py  manip_gui.py  manip_gui.ui  manip_plot.py  robot_description.py
src/ur_kin/: ur_kin.cpp  ur_kin.h
subject/: manip_lab.tex
