<?xml version="1.0"?>
<package format="2">
  <name>ecn_manip</name>
  <version>0.0.0</version>
  <description>The ecn_manip package</description>

  <maintainer email="olivier@todo.todo">Olivier Kermorgant</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>urdf</depend>
  <depend>roscpp</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
